2022-05-15T00:56:08Z:
* notice: last 14d: all unq: 28 2
* notice: prev accum: outdated-all outdated-unq / all unq: 57 16 / 86 20
* notice: next accum: outdated-all outdated-unq / all unq: 58 17 / 86 20
* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +0 -0 -0
* notice: changed dates: []

2022-05-12T08:11:40Z:
* notice: last 14d: all unq: 29 2
* notice: prev accum: outdated-all outdated-unq / all unq: 57 16 / 64 19
* notice: next accum: outdated-all outdated-unq / all unq: 57 16 / 86 20
* notice: prev json diff / prev day diff: unq all: +1 +22 -0 -0 / +1 +22 -0 -0

2022-05-08T08:11:27Z:
* notice: last 14d: all unq: 7 2
* notice: prev accum: outdated-all outdated-unq / all unq: 57 16 / 59 18
* notice: next accum: outdated-all outdated-unq / all unq: 57 16 / 64 19
* notice: prev json diff // prev day diff: unq all: +1 +5 / -0 -0 // +1 +5 / -0 -0

2022-04-30T16:10:58Z:
* notice: last 14d: all unq: 5 1
* notice: prev accum: outdated-all outdated-unq / all unq: 51 13 / 57 16
* notice: next accum: outdated-all outdated-unq / all unq: 52 14 / 57 16
* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -0

2022-04-28T08:11:40Z:
* notice: last 14d: all unq: 6 1
* notice: prev accum: outdated-all outdated-unq / all unq: 49 12 / 56 16
* notice: next accum: outdated-all outdated-unq / all unq: 51 13 / 57 16
* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -0 // +0 +0 / -0 -1

2022-04-28T01:01:50Z:
* notice: last 14d: all unq: 7 1
* notice: prev accum: outdated-all outdated-unq / all unq: 49 12 / 57 16
* notice: next accum: outdated-all outdated-unq / all unq: 49 12 / 56 16
* notice: prev json diff // prev day diff: unq all: +0 +0 / -0 -1 // +0 +0 / -0 -1

2022-04-20T08:11:55Z:
* notice: last 14d: all unq: 8 1
* notice: prev accum: outdated-all outdated-unq / all unq: 49 12 / 53 15
* notice: next accum: outdated-all outdated-unq / all unq: 49 12 / 57 16