@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-15T00:56:08Z",
-  "count_outdated" : 58,
-  "uniques_outdated" : 17,
+  "timestamp" : "2022-05-16T16:14:10Z",
+  "count_outdated" : 59,
+  "uniques_outdated" : 18,
   "count" : 86,
   "uniques" : 20,
   "views" : [
-    {
-      "timestamp": "2022-05-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-05-08T00:00:00Z",
       "count": 5,
