@@ -1,3 +1,10 @@
+2022-05-16T16:14:10Z:
+* notice: last 14d: all unq: 27 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 58 17 / 86 20
+* notice: next accum: outdated-all outdated-unq / all unq: 59 18 / 86 20
+* notice: prev json diff / prev day diff: unq all: +0 +0 -0 -0 / +0 +0 -0 -0
+* notice: changed dates: []
+
 2022-05-15T00:56:08Z:
 * notice: last 14d: all unq: 28 2
 * notice: prev accum: outdated-all outdated-unq / all unq: 57 16 / 86 20
